--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "client-zip",
   "version": "0.1.1",
   "description": "A client-side streaming ZIP generator",
-  "main": "index.js",
+  "browser": "index.js",
   "module": "index.js",
   "scripts": {
     "start": "rollup -c"
