--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "browser": "index.js",
   "module": "index.js",
   "scripts": {
-    "start": "rollup -c"
+    "start": "rollup -c",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,10 +21,13 @@
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-typescript": "^3.0.0",
+    "@types/jest": "^25.1.3",
+    "jest": "^25.1.0",
     "rollup": "^1.31.1",
     "rollup-plugin-terser": "^5.2.0",
-    "tslib": "^1.10.0",
-    "typescript": "^3.7.5"
+    "ts-jest": "^25.2.1",
+    "tslib": "^1.11.0",
+    "typescript": "^3.8.2"
   },
   "dependencies": {}
 }
