--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client-zip",
   "version": "1.0.0",
-  "description": "A client-side streaming ZIP generator",
+  "description": "A tiny and fast client-side streaming ZIP generator",
   "browser": "index.js",
   "module": "index.js",
   "scripts": {
@@ -21,11 +21,12 @@
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-typescript": "^3.1.1",
-    "@types/jest": "^25.1.4",
-    "jest": "^25.1.0",
-    "rollup": "^2.0.6",
+    "@types/jest": "^25.2.1",
+    "@types/node": "^13.11.0",
+    "jest": "^25.2.7",
+    "rollup": "^2.3.2",
     "rollup-plugin-terser": "^5.3.0",
-    "ts-jest": "^25.2.1",
+    "ts-jest": "^25.3.1",
     "tslib": "^1.11.1",
     "typescript": "^3.8.3"
   },
