update dev dependencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,5 @@
     "strictFunctionTypes": true,
     "noImplicitReturns": true
   },
-  "files": [
-    "src/index.ts"
-  ]
+  "include": ["src/*.ts"]
 }
