switch to deno for testing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,15 @@
 {
-  "compileOnSave": true,
   "compilerOptions": {
     "baseUrl": "src",
     "moduleResolution": "node",
     "module": "ES2015",
     "target": "ES2018",
     "strictFunctionTypes": true,
-    "noImplicitReturns": true
+    "noImplicitReturns": true,
+    "lib": ["WebWorker", "ES2019", "ES2020"],
+    "paths": {
+      "*.ts": ["*"]
+    }
   },
-  "include": ["src/*.ts"]
+  "include": ["src/*.ts"],
 }
