--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "types": "index.d.ts",
   "scripts": {
     "start": "rollup -c && rollup -c worker.rollup.config.js",
-    "test": "jest"
+    "test": "deno test --allow-read test/*.test.ts"
   },
   "repository": {
     "type": "git",
@@ -21,15 +21,12 @@
   "author": "David Junger <tffy@free.fr>",
   "license": "MIT",
   "devDependencies": {
-    "@rollup/plugin-typescript": "^5.0.1",
-    "@types/jest": "^26.0.3",
-    "@types/node": "^14.0.14",
-    "jest": "^26.1.0",
-    "rollup": "^2.18.2",
-    "rollup-plugin-terser": "^6.1.0",
-    "ts-jest": "^26.1.1",
-    "tslib": "^2.0.0",
-    "typescript": "^3.9.6"
+    "@rollup/plugin-typescript": "^6.0.0",
+    "rollup": "^2.26.11",
+    "rollup-plugin-terser": "^7.0.2",
+    "tslib": "^2.0.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "typescript": "^4.0.2"
+  }
 }
