upgrade build target to es2020 because we need BigInts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,10 @@
     "baseUrl": "src",
     "moduleResolution": "node",
     "module": "ES2015",
-    "target": "ES2018",
+    "target": "ES2020",
     "strictFunctionTypes": true,
     "noImplicitReturns": true,
-    "lib": ["WebWorker", "ES2019", "ES2020"],
+    "lib": ["WebWorker"],
     "paths": {
       "*.ts": ["*"]
     }
