--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client-zip",
-  "version": "2.0.0-rc2",
+  "version": "2.0.0",
   "description": "A tiny and fast client-side streaming ZIP generator",
   "browser": "index.js",
   "module": "index.js",
@@ -18,12 +18,13 @@
   "keywords": [
     "zip",
     "stream",
-    "browser"
+    "browser",
+    "zip64"
   ],
   "author": "David Junger <tffy@free.fr>",
   "license": "MIT",
   "devDependencies": {
-    "esbuild": "^0.8.6",
-    "terser": "^5.3.8"
+    "esbuild": "^0.8.57",
+    "terser": "^5.6.0"
   }
 }
