enable CI on the no-zip64 branch

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: Test
 
 on:
   push:
-    branches: [master]
+    branches: [master, no-zip64]
   pull_request:
-    branches: [master]
+    branches: [master, no-zip64]
 
 jobs:
   test:
