--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "author": "David Junger <tffy@free.fr>",
   "license": "MIT",
   "devDependencies": {
-    "esbuild": "^0.14.36",
-    "terser": "^5.12.1"
+    "esbuild": "^0.17.19",
+    "terser": "~5.14"
   }
 }
